--- a/public/css/matrix-style.css
+++ b/public/css/matrix-style.css
@@ -1159,7 +1159,6 @@ form {
 	left:0;
 	width:100%;
 	height:100%;
-	background:url(overlay.png) repeat #000;
 	text-align:center;
 	z-index:9999;
 }
@@ -1186,7 +1185,7 @@ form {
 	top:0px;
 	width:100%;
 	height:100%;
-	background:url(overlay.png) repeat #000;
+	background:url(../img/overlay.png) repeat #000;
 	text-align:center;
 	z-index:21;
 }
