--- a/public/css/matrix-style.css
+++ b/public/css/matrix-style.css
@@ -1182,17 +1182,16 @@ form {
 }
 #imgbox {
 	position:absolute; /* keeps the lightbox window in the current viewport */
-	left:0;
-	top:0px;
 	width:100%;
 	height:100%;
 	background:url(overlay.png) repeat #000;
-	text-align:center;
-	z-index:21;
 }
 #imgbox img {
-	margin-top:100px;
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
 	border:10px solid #fff;
+	width: 70%;
 }
 /***********Error Page******************/
 .error_ex{ text-align:center;}
